add unit test file and copy code from lectures

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(MyExtendedKF)
+project(test)
 
 cmake_minimum_required (VERSION 3.5)
 
@@ -7,8 +7,9 @@ add_definitions(-std=c++11)
 set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
-add_subdirectory(src)
-add_subdirectory(test)
+include(CTest)
+enable_testing()
+set(testSources test.cpp)
 
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
@@ -21,3 +22,7 @@ link_directories(/usr/local/Cellar/libuv/1.11.0/lib)
 
 endif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
 
+add_library(tests ${testSources})
+add_executable(UnitTest ${testSources})
+
+target_link_libraries(UnitTest core z ssl uv uWS)
